# test_task_18446538788283045389

./: .gitignore  CMakeLists.txt  CMakeSettings.json  Readme.md
docs/: PRD.md  Plan.md
resource/: test_2.txt  test_3.txt  test_4.txt  test_5.txt
source/: CMakeLists.txt  command_worker.cpp  command_worker.hpp  error.cpp  error.hpp  main.cpp  task.cpp  task.hpp
source/settings/: cli_options.hpp  cli_options_parser.cpp  cli_options_parser.hpp  options_config.hpp  options_validator.cpp  options_validator.hpp  options_value.hpp
source/utils/: default_initialization_helpers.hpp  io_helpers.hpp  validation_helpers.hpp
tests/: CMakeLists.txt  main.cpp
tests/utils/: program_main_helper.hpp  resource_paths.hpp  test_helpers.hpp  utils.hpp
